fix: captures docs and minor fix
