# storage/api-docs/api-docs.json
@@ -16,7 +16,7 @@
         },
         {
             "name": "Captures",
-            "description": "Capture management (response belum fix karena model masih prototype)"
+            "description": "Capture management"
         },
         {
             "name": "Fishes",
@@ -496,24 +496,26 @@
                                     "message": "Get captures successful",
                                     "data": [
                                         {
-                                            "id": 6,
-                                            "result": "Sangat segar",
-                                            "image_url": "https://storage.googleapis.com/hyfish-storage/captures/240612040203_piqelh.jpg",
-                                            "rate": 96,
-                                            "user_id": 7,
-                                            "fish_id": 7,
-                                            "created_at": "2024-06-12T04:02:04.000000Z",
-                                            "updated_at": "2024-06-12T04:02:04.000000Z"
+                                            "id": 1,
+                                            "type": "classification",
+                                            "image_url": "https://storage.googleapis.com/hyfish-storage/captures/240612025822_nVhWS8.jpg",
+                                            "freshness": null,
+                                            "score": 96,
+                                            "user_id": 2,
+                                            "fish_id": 6,
+                                            "created_at": "2024-06-12T14:58:25.000000Z",
+                                            "updated_at": "2024-06-12T14:58:25.000000Z"
                                         },
                                         {
-                                            "id": 7,
-                                            "result": "Sangat segar",
-                                            "image_url": "https://storage.googleapis.com/hyfish-storage/captures/240612040220_qPVZA6.jpg",
-                                            "rate": 96,
-                                            "user_id": 7,
-                                            "fish_id": 7,
-                                            "created_at": "2024-06-12T04:02:21.000000Z",
-                                            "updated_at": "2024-06-12T04:02:21.000000Z"
+                                            "id": 2,
+                                            "type": "freshness",
+                                            "image_url": "https://storage.googleapis.com/hyfish-storage/captures/240612030526_DBy5N7.jpg",
+                                            "freshness": "Sangat segar",
+                                            "score": 96,
+                                            "user_id": 2,
+                                            "fish_id": null,
+                                            "created_at": "2024-06-12T15:05:30.000000Z",
+                                            "updated_at": "2024-06-12T15:05:30.000000Z"
                                         }
                                     ]
                                 },
@@ -529,7 +531,8 @@
                 }
             },
             "post": {
-                "summary": "Classified fish image",
+                "summary": "Classified fish image / Predict fish freshness",
+                "description": "'type: classification' for classified fish image, 'type: freshness' for predict fish freshness",
                 "tags": [
                     "Captures"
                 ],
@@ -564,18 +567,42 @@
                         "description": "Prediction successfull",
                         "content": {
                             "application/json": {
-                                "example": {
-                                    "status": true,
-                                    "message": "Store capture successful",
-                                    "data": {
-                                        "image_url": "https://storage.googleapis.com/hyfish-storage/captures/240612044252_9BscNG.jpg",
-                                        "result": "Sangat segar",
-                                        "rate": "96",
-                                        "user_id": 7,
-                                        "fish_id": 7,
-                                        "updated_at": "2024-06-12T04:42:53.000000Z",
-                                        "created_at": "2024-06-12T04:42:53.000000Z",
-                                        "id": 8
+                                "examples": {
+                                    "classification": {
+                                        "description": "Classified fish image",
+                                        "value": {
+                                            "status": true,
+                                            "message": "Store capture successful",
+                                            "data": {
+                                                "type": "classification",
+                                                "image_url": "https://storage.googleapis.com/hyfish-storage/captures/240612101943_lC8RSm.png",
+                                                "freshness": null,
+                                                "score": 1,
+                                                "user_id": 7,
+                                                "fish_id": 5,
+                                                "updated_at": "2024-06-12T22:19:48.000000Z",
+                                                "created_at": "2024-06-12T22:19:48.000000Z",
+                                                "id": 3
+                                            }
+                                        }
+                                    },
+                                    "freshness": {
+                                        "description": "Predict fish freshness",
+                                        "value": {
+                                            "status": true,
+                                            "message": "Store capture successful",
+                                            "data": {
+                                                "type": "freshness",
+                                                "image_url": "https://storage.googleapis.com/hyfish-storage/captures/240612102059_83pnYz.png",
+                                                "freshness": "Fresh",
+                                                "score": 0.8115981906433213,
+                                                "user_id": 7,
+                                                "fish_id": null,
+                                                "updated_at": "2024-06-12T22:21:01.000000Z",
+                                                "created_at": "2024-06-12T22:21:01.000000Z",
+                                                "id": 4
+                                            }
+                                        }
                                     }
                                 },
                                 "schema": {
@@ -2595,27 +2622,33 @@
                         "id": {
                             "type": "number"
                         },
-                        "result": {
-                            "type": "string"
+                        "type": {
+                            "type": "string",
+                            "description": "freshness | classification"
                         },
                         "image_url": {
                             "type": "string"
                         },
-                        "rate": {
+                        "freshness": {
+                            "type": "string",
+                            "description": "nullable"
+                        },
+                        "score": {
                             "type": "number"
                         },
                         "user_id": {
                             "type": "number"
                         },
                         "fish_id": {
-                            "type": "number"
+                            "type": "number",
+                            "description": "nullable"
                         },
-                        "updated_at": {
+                        "created_at": {
                             "type": "string",
                             "format": "date-time",
                             "description": "Timestamp in ISO 8601 format with microseconds"
                         },
-                        "created_at": {
+                        "updated_at": {
                             "type": "string",
                             "format": "date-time",
                             "description": "Timestamp in ISO 8601 format with microseconds"
@@ -2641,27 +2674,33 @@
                             "id": {
                                 "type": "number"
                             },
-                            "result": {
-                                "type": "string"
+                            "type": {
+                                "type": "string",
+                                "description": "freshness | classification"
                             },
                             "image_url": {
                                 "type": "string"
                             },
-                            "rate": {
+                            "freshness": {
+                                "type": "string",
+                                "description": "nullable"
+                            },
+                            "score": {
                                 "type": "number"
                             },
                             "user_id": {
                                 "type": "number"
                             },
                             "fish_id": {
-                                "type": "number"
+                                "type": "number",
+                                "description": "nullable"
                             },
-                            "updated_at": {
+                            "created_at": {
                                 "type": "string",
                                 "format": "date-time",
                                 "description": "Timestamp in ISO 8601 format with microseconds"
                             },
-                            "created_at": {
+                            "updated_at": {
                                 "type": "string",
                                 "format": "date-time",
                                 "description": "Timestamp in ISO 8601 format with microseconds"
@@ -2744,7 +2783,7 @@
                     "items": {
                         "type": "string"
                     }
-                },
+                }
             }
         },
         "postRequestSchema": {
